--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ body {
 }
 
 .content {
-  width: 31%;
+  width: 30%;
   margin: auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -24,9 +24,9 @@ body {
 .task__title {
   margin: 0;
   color: white;
-  font-size: 15px;
+  font-size: 30px;
   font-weight: bolder;
-  padding: 10px 0;
+  padding: 20px 0;
 }
 
 .task__content {
@@ -41,10 +41,9 @@ body {
 .task__content-space {
   border: 0;
   outline: none;
-  padding: 9px 8px;
+  padding: 17px 18px;
   width: 82%;
-  display: inherit;
-  font-size: 10px;
+  font-size: 20px;
 }
 
 .task__content-button {
@@ -53,13 +52,14 @@ body {
   outline: none;
   cursor: pointer;
   color: #1da1f2;
-  font-size: 10px;
+  font-size: 20px;
+  padding-right: 13px;
 }
 
 .list {
   background-color: white;
   position: relative;
-  margin: 10px 0;
+  margin: 20px 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -70,23 +70,24 @@ body {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  padding: 15px 20px 25px 20px;
+  padding: 17px 37px 50px 37px;
 }
 
 .list__item {
-  font-size: 10px;
+  font-size: 17px;
   border-bottom: solid #1da1f2;
   width: 100%;
   text-align: left;
-  padding: 5px 0;
+  padding: 14px 0;
+  color: #666565;
 }
 
 .list__item-x {
   margin-right: 8px;
-  margin-right: 8px;
   background-color: #e05050;
-  padding: 0 3px;
+  padding: 0 7px 2px 7px;
   color: white;
+  cursor: pointer;
 }
 
 .list__clear {
@@ -94,10 +95,10 @@ body {
   border: transparent;
   background-color: white;
   color: #e05050;
-  font-size: 10px;
+  font-size: 17px;
   position: absolute;
-  right: 15px;
-  bottom: 4px;
+  right: 40px;
+  bottom: 12px;
   cursor: pointer;
   outline: none;
 }
@@ -105,5 +106,7 @@ body {
 .list__clear:hover {
   background-color: #e05050;
   color: white;
+  border-radius: 20px;
+  font-weight: bolder;
 }
 /*# sourceMappingURL=index.css.map */
