--- a/index.scss
+++ b/index.scss
@@ -7,7 +7,7 @@ body {
     height: 100vh;
 }
 .content {
-    width: 31%;
+    width: 30%;
     margin: auto;
     display: flex;
     text-align: center;
@@ -17,9 +17,9 @@ body {
     &__title {
         margin: 0;
         color: white;
-        font-size: 15px;
+        font-size: 30px;
         font-weight: bolder;
-        padding: 10px 0;
+        padding: 20px 0;
     }
     &__content {
         display: flex;
@@ -27,10 +27,9 @@ body {
         &-space {
             border: 0;
             outline: none;
-            padding: 9px 8px;
+            padding: 17px 18px;
             width: 82%;
-            display: inherit;
-            font-size: 10px;
+            font-size: 20px;
         }
         &-button {
             background-color: white;
@@ -38,30 +37,32 @@ body {
             outline: none;
             cursor: pointer;
             color: #1da1f2;
-            font-size: 10px;
+            font-size: 20px;
+            padding-right: 13px;
         }
     }
 }
 .list {
     background-color: white;
     position: relative;
-    margin: 10px 0;
+    margin: 20px 0;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 15px 20px 25px 20px;
+    padding: 17px 37px 50px 37px;
     &__item {
-        font-size: 10px;
+        font-size: 17px;
         border-bottom: solid #1da1f2;
         width: 100%;
         text-align: left;
-        padding: 5px 0;
+        padding: 14px 0;
+        color: rgb(102, 101, 101);
         &-x {
             margin-right: 8px;
-            margin-right: 8px;
             background-color: rgb(224, 80, 80);
-            padding: 0 3px;
+            padding: 0 7px 2px 7px;
             color: white;
+            cursor: pointer;
         }
     }
     &__clear {
@@ -69,15 +70,17 @@ body {
         border: transparent;
         background-color: white;
         color: rgb(224, 80, 80);
-        font-size: 10px;
+        font-size: 17px;
         position: absolute;
-        right: 15px;
-        bottom: 4px;
+        right: 40px;
+        bottom: 12px;
         cursor: pointer;
         outline: none;
         &:hover {
             background-color: rgb(224, 80, 80);
             color: white;
+            border-radius: 20px;
+            font-weight: bolder;
         }
     }
 }
