--- a/index.css
+++ b/index.css
@@ -60,9 +60,7 @@ body {
   background-color: white;
   position: relative;
   margin: 20px 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: none;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
