--- a/index.scss
+++ b/index.scss
@@ -46,7 +46,7 @@ body {
     background-color: white;
     position: relative;
     margin: 20px 0;
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: flex-start;
     padding: 17px 37px 50px 37px;
